[project]
name = "common_utilities"
version = "0.1.0"
description = "A collection of custom Python utility classes and functions designed to streamline common development tasks across different projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pynvml>=12.0.0",
    "redis>=6.2.0",
    "orjson"
]
