[project]
name = "common_utilities"
version = "1.0.0"
description = "A collection of custom Python utility classes and functions designed to streamline common development tasks across different projects."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "pillow",
    "pynvml",
    "redis",
    "orjson",
    "pika",
    "aio-pika"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
